test fix for gift wrapping

--- a/assets/scss/component/_iconheader.scss
+++ b/assets/scss/component/_iconheader.scss
@@ -149,9 +149,8 @@
             max-width: 1225px;
             margin: 0 auto;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-evenly;
             align-items: center;
-            padding: 0 46px 0 132px;
 
             @include respond(1275px) {
                 padding: 0 3.75%;
